Update new photos

--- a/collaborations.html
+++ b/collaborations.html
@@ -90,6 +90,7 @@
             <div class="services-list">
               <img src="assets/img/collaborations/coop-1.jpg" alt="" class="img-fluid services-img">
               <img src="assets/img/collaborations/coop-2.jpg" alt="" class="img-fluid services-img">
+              <img src="assets/img/collaborations/coop-3.jpg" alt="" class="img-fluid services-img">
             </div>
           </div>
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
