--- a/revitalizations.html
+++ b/revitalizations.html
@@ -136,6 +136,22 @@
                 <div class="swiper-slide">
                   <img src="assets/img/revitalizations/rev-07.jpg" alt="">
                 </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/revitalizations/rev-08.jpg" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/revitalizations/rev-09.jpg" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/revitalizations/rev-10.jpg" alt="">
+                </div>
+
+                <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
+                  <img src="assets/img/revitalizations/rev-11.jpg" alt="" style="width: 80%; height: 80%;">
+                </div>
               </div>
             </div>
           </div>
