Add audio & video files

--- a/index.html
+++ b/index.html
@@ -97,7 +97,12 @@
         <br><br><br><br><br>
         <h2>Chen-Yi Yang</h2>
         <p><span>I'm a teacher, sociolinguist, and a cross-field practitioner</span></p>
-        <!-- <br>
+        <br>
+        <audio controls>
+          <source src="/assets/audio/introduction-to-karen-yang.wav" type="audio/wav">
+          Your browser does not support the audio tag.
+        </audio> ➜ Audio-link Version 📢
+        <!--
         <div class="video-container">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/wX8kywE8a8U?si=-pNBlxYZ8C9YcKAL" title="楊真宜老師 學術研究介紹" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div> -->
@@ -134,9 +139,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>楊真宜 Chen-Yi Yang</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Name (E):</strong> <span>Karen Yang</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Taichung, Taiwan</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Pet:</strong> Black Shiba Inu 🐺🍖<span>
-                    
-                  </span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Pet:</strong> Black Shiba Inu 🐺🍖</li>
                 </ul>
               </div>
               <div class="col-lg-6">
