--- a/mylife-details.html
+++ b/mylife-details.html
@@ -88,15 +88,14 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-8">
+          <div class="col-lg-7">
             <div class="portfolio-details-slider swiper init-swiper">
 
               <script type="application/json" class="swiper-config">
                 {
-                  "loop": true,
                   "speed": 600,
                   "autoplay": {
-                    "delay": 5000
+                    "delay": 10000
                   },
                   "slidesPerView": "auto",
                   "pagination": {
@@ -136,11 +135,18 @@
                 <div class="swiper-slide">
                   <img src="assets/img/mylife/mylife-07.jpg" alt="">
                 </div>
+
+                <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
+                  <video controls autoplay muted loop style="width: 40%; height: 40%;">
+                    <source src="assets/video/basketball-machine.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                  </video>
+                </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4">
+          <div class="col-lg-5">
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>My Life🍟</h3>
               <ul>
@@ -151,6 +157,7 @@
                 <li>✈️ 夏威夷海灘<br>Hawaiian beaches</li>
                 <li>✈️ 義大利威尼斯二手書店<br>Second-hand bookstore in Venice, Italy</li>
                 <li>✈️ 西子灣騎單車<br>Bicycling in Sizihwan</li>
+                <li>🏀 認真PK投籃機<br>Basketball Machine</li>
               </ul>
             </div>
 
