--- a/licenses-certificates.html
+++ b/licenses-certificates.html
@@ -122,15 +122,15 @@
                 </div>
 
                 <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
-                  <img src="assets/img/licenses/iLink-AI-Workshop.png" alt="" style="width: 60%; height: 60%;">
-                </div>          
-
-                <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
                   <img src="assets/img/certificates/Secondary-School-Teacher.png" alt="" style="width: 60%; height: 60%;">
                 </div>
 
                 <div class="swiper-slide">
                   <img src="assets/img/certificates/Southern-Min-Language-Proficiency.png" alt="">
+                </div>
+
+                <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
+                  <img src="assets/img/licenses/iLink-AI-Workshop.png" alt="" style="width: 60%; height: 60%;">
                 </div>
 
               </div>
@@ -144,9 +144,9 @@
                 <li>📜 TKT 劍橋英語教師認證</li>
                 <li>📜 AIL 人工智慧專業級證照</li>
                 <li>📜 AIL 人工智慧基礎級證照</li>
-                <li>📜 生成式 AI 在工作場所的應用工作坊</li>
                 <li>📜 高級中等學校英文科教師證書</li>
                 <li>📜 閩南語語言能力認證考試合格證書</li>
+                <li>📜 生成式AI在工作場所的應用工作坊證明</li>
               </ul>
             </div>
 
