--- a/mylife-details.html
+++ b/mylife-details.html
@@ -137,6 +137,10 @@
                 </div>
 
                 <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
+                  <img src="assets/img/mylife/mylife-08.jpg" alt="" style="width: 60%; height: 60%;">
+                </div>
+
+                <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
                   <video controls autoplay muted loop style="width: 40%; height: 40%;">
                     <source src="assets/video/basketball-machine.mp4" type="video/mp4">
                     Your browser does not support the video tag.
@@ -157,6 +161,7 @@
                 <li>✈️ 夏威夷海灘<br>Hawaiian beaches</li>
                 <li>✈️ 義大利威尼斯二手書店<br>Second-hand bookstore in Venice, Italy</li>
                 <li>✈️ 西子灣騎單車<br>Bicycling in Sizihwan</li>
+                <li>📱 Karen 貼圖集 <br>Karen's Sticker Set</li>
                 <li>🏀 認真PK投籃機<br>Basketball Machine</li>
               </ul>
             </div>
