Revise the page of mylife

--- a/mylife-details.html
+++ b/mylife-details.html
@@ -136,9 +136,9 @@
                   <img src="assets/img/mylife/mylife-07.jpg" alt="">
                 </div>
 
-                <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
+                <!-- <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
                   <img src="assets/img/mylife/mylife-08.jpg" alt="" style="width: 60%; height: 60%;">
-                </div>
+                </div> -->
 
                 <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
                   <video controls autoplay muted loop style="width: 40%; height: 40%;">
@@ -161,7 +161,7 @@
                 <li>✈️ 夏威夷海灘<br>Hawaiian beaches</li>
                 <li>✈️ 義大利威尼斯二手書店<br>Second-hand bookstore in Venice, Italy</li>
                 <li>✈️ 西子灣騎單車<br>Bicycling in Sizihwan</li>
-                <li>📱 Karen 貼圖集 <br>Karen's Sticker Set</li>
+                <!-- <li>📱 Karen 貼圖集 <br>Karen's Sticker Set</li> -->
                 <li>🏀 認真PK投籃機<br>Basketball Machine</li>
               </ul>
             </div>
