Update new contributions

--- a/graduation-projects.html
+++ b/graduation-projects.html
@@ -98,7 +98,7 @@
             <hr>
             <ul>
               <li><i class="bi bi-caret-right"></i> <span>台灣北中南大學生台語的學習狀況和文化認同 | The learning status of Taiwanese language among university students in northern, central, and southern Taiwan and its connection to cultural identity | 2024</span></li>
-              <li><i class="bi bi-caret-right"></i> <span>應用英語系大學生英文口說焦慮潛在成因探討 | The Exploration of Potential Factors Affecting English-Speaking Anxiety of College Students from the Department of Applied English | 2024</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>應用英語系大學生英文口說焦慮潛在成因探討 | The Exploration of Potential Factors Affecting English-Speaking Anxiety of College Students from the Department of Applied English | 2024 (發表於 2025 國立台中科技大學應用英語系學術研討會)</span></li>
               <li><i class="bi bi-caret-right"></i> <span>台灣新二代的語言保留與習得：比較日本、越南及印尼 | The Language Maintenance and Acquisition of New Immigrant Children in Taiwan: The Comparison of Japan, Vietnam, and Indonesia | 2023</span></li>
               <li><i class="bi bi-caret-right"></i> <span>越南新二代學習媽媽母語之語言態度調查 | A Study on Language Attitudes of the Vietnamese New Immigrant Children Learning New Immigrant Mother's Language | 2023</span></li> 
             </ul>
