--- a/participations.html
+++ b/participations.html
@@ -101,17 +101,18 @@
             <h5>審查/審稿/口試委員</h5>
             <ul>
               <li><i class="bi bi-caret-right"></i> <span>台灣語言文學研究學術期刊《台灣語文研究》| 台灣語文學會 | 審查委員</span></li>
-              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學應用英語系112學年度實務專題 | 口試委員</span></li>
-              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學應用英語系111學年度實務專題 | 口試委員</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學應用英語系113年度實務專題 | 口試委員</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學應用英語系112年度實務專題 | 口試委員</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學應用英語系111年度實務專題 | 口試委員</span></li>
               <li><i class="bi bi-caret-right"></i> <span>第五屆台灣創新發明教育學會年會暨國際研討會及第二十二屆管理學術研討會 | 審稿委員 | 2024.12</span></li>
-              <li><i class="bi bi-caret-right"></i> <span>靜宜大學英國語文學系111學年度畢業專題發表會 | 外審委員 | 2023.05</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>靜宜大學英國語文學系111年度畢業專題發表會 | 外審委員 | 2023.05</span></li>
             </ul>
 
             <h5>研討會主持人/評論人</h5>
             <ul>
               <li><i class="bi bi-caret-right"></i> <span>第十五屆台灣語言及其教學國際學術研討會 | 主持人&評論人 | 2024.11</span></li>
               <li><i class="bi bi-caret-right"></i> <span>第六屆新實踐暨台日大學地方連結與社會實踐國際研討會(科技部) | 評論人 | 2024.09</span></li>
-              <li><i class="bi bi-caret-right"></i> <span>靜宜大學英國語文學系113學年度研究生論文研討會 | 主持人 | 2024.06</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>靜宜大學英國語文學系113年度研究生論文研討會 | 主持人 | 2024.06</span></li>
               <li><i class="bi bi-caret-right"></i> <span>第五屆新實踐暨台日大學地方連結與社會實踐國際研討會(科技部) | 評論人 | 2023.09</span></li>
               <li><i class="bi bi-caret-right"></i> <span>第二屆新實踐暨台日大學地方連結與社會實踐國際研討會(科技部) | 評論人 | 2020.09</span></li>
             </ul>
@@ -119,16 +120,20 @@
             <h5>客座講師/主講人/與談人</h5>
             <ul>
               <li><i class="bi bi-caret-right"></i> <span>靜宜大學《The Past and Present of Taiwanese Languages 台灣語言的前世與今生》| 客座講師 | 2024.04</span></li>
-              <li><i class="bi bi-caret-right"></i> <span>靜宜大學112學年度統整計畫講座《田野調查與訪談：理論與實作的距離》| 主講人 | 2023.10</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>靜宜大學112年度統整計畫講座《田野調查與訪談：理論與實作的距離》| 主講人 | 2023.10</span></li>
               <li><i class="bi bi-caret-right"></i> <span>靜宜大學 TEEP@AsiaPlus Invited Speech《A Sociolinguistic Description of Language Change in Taiwan》| 客座講師 | 2020.05</span></li>
               <li><i class="bi bi-caret-right"></i> <span>台灣教育研究學會《2019台灣教育學術研討會—跨域、跨界的教育新契機》【教育創新與社會創新(二)】| 與談人 | 2019.11</span></li>
             </ul>
 
-            <h5>活動主辦人</h5>
+            <h5>競賽活動與演講主辦人</h5>
             <ul>
-              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學應用英語系112學年度英語微電影比賽 | 主辦人 | 2024.01</span></li>
-              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學應用英語系112學年度英語歌唱競賽 | 主辦人 | 2023.05</span></li>
-              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學應用英語系111學年度科技商用英語演講競賽 | 主辦人 | 2022.10</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>職場專業演講：媽媽「嗓」的奇幻旅程 | 主辦人 | 2024.06</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>職場專業演講：我的斜槓人生不停歇 | 主辦人 | 2024.05</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>職場專業演講：英語履歷全攻略 | 主辦人 | 2024.05</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學應用英語系113年度英語朗讀比賽 | 主辦人 | 2025.05</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學應用英語系112年度英語微電影比賽 | 主辦人 | 2024.01</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學應用英語系112年度英語歌唱競賽 | 主辦人 | 2023.05</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學應用英語系111年度科技商用英語演講競賽 | 主辦人 | 2022.10</span></li>
             </ul>
 
             <h5>研習課程</h5>
@@ -142,7 +147,7 @@
               <li><i class="bi bi-caret-right"></i> <span>華氏七七餐飲 | 專業實務研習 | 2022.09</span></li>
             </ul>
 
-            <h5>甄試/招生委員</h5>
+            <h5>甄試/招生/轉學考委員</h5>
             <ul>
               <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學應用英語系114年推薦甄試委員</span></li>
               <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學應用英語系114年技優甄試委員</span></li>
@@ -154,6 +159,21 @@
               <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學應用英語系112年技優甄試委員</span></li>
               <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學應用英語系112年轉學考招生委員</span></li>
             </ul>
+
+            <h5>其他貢獻</h5>
+            <ul>
+              <li><i class="bi bi-caret-right"></i> <span>協助文創學院112年度教育部 USR 計畫</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>協助文創學院111年度教育部 USR 計畫</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學應用英語系113年度夜間部導師</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學應用英語系112年度夜間部導師</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學應用英語系111年度夜間部導師</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學應用英語系113年度跨領域學分學程推廣</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學應用英語系112年度跨領域學分學程推廣</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學應用英語系113年度雙主修、輔系推廣</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學應用英語系112年度雙主修、輔系推廣</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學應用英語系111年度雙主修、輔系推廣</span></li>
+            </ul>
+
             <hr><div style="text-align: right;"><a href="/#achievements">↩️ BACK</a></div>
         </div>
       </div>
