--- a/competitions.html
+++ b/competitions.html
@@ -145,6 +145,7 @@
                 <li>✨<code>112年度指導4組參賽 >> 4組全數入圍決賽</code>✨</li>
                 <li>✨<code>113年度指導3組參賽 >> 2組入圍決賽</code>✨</li><hr>
                 <li>📢 今天為大家介紹 112年度 <a href="#">#大專組優勝</a> 的另一支隊伍提案「鐵骨柔情-響遍太平」。來自 #勤益科大 的同學們以台中市太平區鐵工產業為核心，期望以嶄新的創意方案推廣當地的鐵工藝術與文化特色。</li>
+                <li>📢 <code>優勝組別 >> 應用英語系+資訊工程系 跨領域共同合作</code></li>
                 <li><iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2F61550050917478%2Fvideos%2F554243197204450&appId=685790705411334" width="100%" height="200" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe></li>
               </ul>
             </div>
