--- a/participations.html
+++ b/participations.html
@@ -93,6 +93,8 @@
               <img src="assets/img/academic/acad-7.jpg" alt="" class="img-fluid services-img">
               <img src="assets/img/academic/acad-8.jpg" alt="" class="img-fluid services-img">
               <img src="assets/img/academic/acad-9.jpg" alt="" class="img-fluid services-img">
+              <img src="assets/img/academic/acad-10.jpg" alt="" class="img-fluid services-img">
+              <img src="assets/img/academic/acad-11.jpg" alt="" class="img-fluid services-img">
             </div>
           </div>
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
