Add new publication

--- a/publications.html
+++ b/publications.html
@@ -108,7 +108,8 @@
               研討會論文 Conference Papers
             </h5>
             <ul>
-              <li><i class="bi bi-caret-right"></i> <span>Yang, Chen Yi (2024). Interdisciplinary Application of Chinese-English Translation Courses: Using GIS Story Maps and Community Field Surveys as an Example. 2024 The Conference on Humanities, Social Sciences, and Industry Innovation Linkages, Shih Chien University.</span></li>             
+              <li><i class="bi bi-caret-right"></i> <span>Lin, J. bao, Chen-Yi Yang, Yan-Jhen Yang, Jia-ling Tsai, Shen-Jhen Lin, & Tsai-Chun Tseng. (2025). The Exploration of Potential Factors Affecting English-Speaking Anxiety of College Students from the Department of Applied English. 2025 NTCUST Academic Conference on Applied English. National Taichung University of Science and Technology, Taichung.</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>Yang, Chen Yi (2024). Interdisciplinary Application of Chinese-English Translation Courses: Using GIS Story Maps and Community Field Surveys as an Example. 2024 The Conference on Humanities, Social Sciences, and Industry Innovation Linkages, Shih Chien University.</span></li>
               <li><i class="bi bi-caret-right"></i> <span>Yang, Chen Yi (2023). Interdisciplinary Application of Chinese-English Translation and Community GIS Story Map. 2023 International Conference of New Praxis and Taiwan-Japan Alliance of Local Revitalization and Social Practice, National Chi Nan University.</span></li>
               <li><i class="bi bi-caret-right"></i> <span>楊真宜（2022）。客家年輕世代的語言活力與傳承。第十四屆台灣語言及其教學暨台灣學「蛻變的聲音」國際學術研討會，國立成功大學。</span></li>
               <li><i class="bi bi-caret-right"></i> <span>楊真宜（2022）。大學社會參與：以竹北客家農村為例。2022 第三屆中華物聯網與人工智慧研究學會年會暨國際研討會及第20屆管理學術研討會，國立勤益科技大學。</span></li>
