Update academic participation

--- a/participations.html
+++ b/participations.html
@@ -136,6 +136,7 @@
               <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學應用英語系112年度英語微電影比賽 | 主辦人 | 2024.01</span></li>
               <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學應用英語系112年度英語歌唱競賽 | 主辦人 | 2023.05</span></li>
               <li><i class="bi bi-caret-right"></i> <span>國立勤益科技大學應用英語系111年度科技商用英語演講競賽 | 主辦人 | 2022.10</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>AIL 人工智慧專業級證照考試 Artificial Intelligence Literacy Certification Programs (Expert) | 主辦人 | 2024.06</span></li>
             </ul>
 
             <h5>研習課程</h5>
