--- a/dog-details.html
+++ b/dog-details.html
@@ -118,6 +118,12 @@
                 <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
                   <img src="assets/img/portfolio/dog-3.jpg" alt="" style="width: 70%; height: 70%;">
                 </div>
+                <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
+                  <img src="assets/img/portfolio/dog-4.jpg" alt="" style="width: 50%; height: 50%;">
+                </div>
+                <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
+                  <img src="assets/img/portfolio/dog-5.jpg" alt="" style="width: 70%; height: 70%;">
+                </div>
               </div>
             </div>
           </div>
