Update new photos

--- a/competitions.html
+++ b/competitions.html
@@ -129,6 +129,17 @@
                 <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
                   <img src="assets/img/guides/guide-award-04.png" alt="" style="width: 60%; height: 60%;">
                 </div>
+                <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
+                  <img src="assets/img/guides/guide-09.jpg" alt="" style="width: 60%; height: 60%;">
+                </div>
+                <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
+                  <img src="assets/img/guides/guide-10.jpg" alt="" style="width: 80%; height: 80%;">
+                </div>
+                <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
+                  <img src="assets/img/guides/guide-11.jpg" alt="" style="width: 60%; height: 60%;">
+                </div>
+                <div class="swiper-slide"><img src="assets/img/guides/guide-12.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="assets/img/guides/guide-13.jpg" alt=""></div>
               </div>
             </div>
           </div>
