--- a/dog-details.html
+++ b/dog-details.html
@@ -124,6 +124,9 @@
                 <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
                   <img src="assets/img/portfolio/dog-5.jpg" alt="" style="width: 70%; height: 70%;">
                 </div>
+                <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
+                  <img src="assets/img/portfolio/dog-6.jpg" alt="" style="width: 60%; height: 60%;">
+                </div>
               </div>
             </div>
           </div>
