Update new photos

--- a/competitions.html
+++ b/competitions.html
@@ -140,6 +140,12 @@
                 </div>
                 <div class="swiper-slide"><img src="assets/img/guides/guide-12.jpg" alt=""></div>
                 <div class="swiper-slide"><img src="assets/img/guides/guide-13.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="assets/img/guides/guide-14.jpg" alt=""></div>
+                <div class="swiper-slide">
+                  <a href="https://www.ner.gov.tw/news/6833083dfbb2c50022f244c2" target="_blank">
+                    <img src="assets/img/guides/guide-15.jpg" alt="" style="width: 80%; height: 80%;">
+                  </a>
+                </div>
               </div>
             </div>
           </div>
