--- a/participations.html
+++ b/participations.html
@@ -93,9 +93,9 @@
               <img src="assets/img/academic/acad-7.jpg" alt="" class="img-fluid services-img">
               <img src="assets/img/academic/acad-8.jpg" alt="" class="img-fluid services-img">
               <img src="assets/img/academic/acad-9.jpg" alt="" class="img-fluid services-img">
+              <img src="assets/img/academic/acad-13.jpg" alt="" class="img-fluid services-img">
               <img src="assets/img/academic/acad-10.jpg" alt="" class="img-fluid services-img">
               <img src="assets/img/academic/acad-11.jpg" alt="" class="img-fluid services-img">
-              <img src="assets/img/academic/acad-12.jpg" alt="" class="img-fluid services-img">
             </div>
           </div>
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
@@ -113,6 +113,7 @@
 
             <h5>研討會主持人/評論人</h5>
             <ul>
+              <li><i class="bi bi-caret-right"></i> <span>靜宜大學2025外語學院全國研究生聯合論文發表會暨研究論壇 | 主持人 | 2025.06</span></li>
               <li><i class="bi bi-caret-right"></i> <span>第十五屆台灣語言及其教學國際學術研討會 | 主持人&評論人 | 2024.11</span></li>
               <li><i class="bi bi-caret-right"></i> <span>第六屆新實踐暨台日大學地方連結與社會實踐國際研討會(科技部) | 評論人 | 2024.09</span></li>
               <li><i class="bi bi-caret-right"></i> <span>靜宜大學英國語文學系113年度研究生論文研討會 | 主持人 | 2024.06</span></li>
