--- a/index.html
+++ b/index.html
@@ -187,19 +187,28 @@
               <h5>2022 - Present</h5>
               <p><em>Assistant Professor, Department of Applied English, National Chin-Yi University of Technology, Taichung, Taiwan.</em></p>
               <ul style="list-style-type: none;">
-                <li><i class="bi bi-briefcase"></i> <b>114年度教育部「人文社會與產業實務創新鏈結計畫」第二期計畫</b></li>
+
+                <li><i class="bi bi-briefcase"></i> <b>114年度教育部教學實踐研究計畫</b></li>
                 <li>
                   <ul style="list-style-type: none;">
-                    <li><i class="bi bi-arrow-right-short"></i> 從教室到社區：中英翻譯與GIS故事地圖之跨域應用3.0</li>
-                    <li><i class="bi bi-arrow-right-short"></i> 計畫編號：MOE-114-1-C-008</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 中英筆譯與地方創生和社會實踐之整合課程【專案】大學社會責任(USR)</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 計畫編號：</li>
                   </ul>
                 </li>
 
                 <li><i class="bi bi-briefcase"></i> <b>113年度教育部教學實踐研究計畫</b></li>
                 <li>
                   <ul style="list-style-type: none;">
-                    <li><i class="bi bi-arrow-right-short"></i> GIS故事地圖與中英翻譯課程之跨域應用</li>
+                    <li><i class="bi bi-arrow-right-short"></i> GIS故事地圖與中英翻譯課程之跨域應用【教育】</li>
                     <li><i class="bi bi-arrow-right-short"></i> 計畫編號：PED1137365</li>
+                  </ul>
+                </li>
+
+                <li><i class="bi bi-briefcase"></i> <b>114年度教育部「人文社會與產業實務創新鏈結計畫」第二期計畫</b></li>
+                <li>
+                  <ul style="list-style-type: none;">
+                    <li><i class="bi bi-arrow-right-short"></i> 從教室到社區：中英翻譯與GIS故事地圖之跨域應用3.0</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 計畫編號：MOE-114-1-C-008</li>
                   </ul>
                 </li>
 
