Update award info

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
             <div class="resume-item pb-0">
               <h4>國立勤益科技大學推動研究發展績效獎</h4>
               <p><em>Promoting Research and Development Performance Award, NCUT.</em></p>
-              <ul style="list-style-type: none;"><li><i class="bi bi-check2-circle"></i> 113年度績效卓越 (2024)</li></ul>
+              <ul style="list-style-type: none;"><li><i class="bi bi-check2-circle"></i> 113年度績效卓越獎 (2024)</li></ul>
               <ul style="list-style-type: none;"><li><i class="bi bi-check2-circle"></i> 112年度核心證照獎 (2023)</li></ul>
               <h4>國科會獎勵博士候選人撰寫博士論文獎</h4>
               <p><em>Doctoral Dissertation Fellowships for the Humanities and Social Sciences</em></p>
