feat: update with the latest info

--- a/competitions.html
+++ b/competitions.html
@@ -130,6 +130,9 @@
                   <img src="assets/img/guides/guide-award-04.png" alt="" style="width: 60%; height: 60%;">
                 </div>
                 <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
+                  <img src="assets/img/guides/guide-award-05.png" alt="" style="width: 60%; height: 60%;">
+                </div>
+                <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
                   <img src="assets/img/guides/guide-09.jpg" alt="" style="width: 60%; height: 60%;">
                 </div>
                 <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
