--- a/participations.html
+++ b/participations.html
@@ -96,6 +96,7 @@
               <img src="assets/img/academic/acad-13.jpg" alt="" class="img-fluid services-img">
               <img src="assets/img/academic/acad-10.jpg" alt="" class="img-fluid services-img">
               <img src="assets/img/academic/acad-11.jpg" alt="" class="img-fluid services-img">
+              <img src="assets/img/academic/acad-14.jpg" alt="" class="img-fluid services-img">
             </div>
           </div>
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
