--- a/patents-awards.html
+++ b/patents-awards.html
@@ -114,7 +114,15 @@
                 </div>
 
                 <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
-                  <img src="assets/img/awards/RD-Performance-Award.png" alt="" style="width: 60%; height: 60%;">
+                  <img src="assets/img/awards/RD-Performance-Award-pat01.png" alt="" style="width: 60%; height: 60%;">
+                </div>
+
+                <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
+                  <img src="assets/img/awards/RD-Performance-Award-core02.png" alt="" style="width: 60%; height: 60%;">
+                </div>
+
+                <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
+                  <img src="assets/img/awards/RD-Performance-Award-core01.png" alt="" style="width: 60%; height: 60%;">
                 </div>
 
                 <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
