--- a/patents-awards.html
+++ b/patents-awards.html
@@ -137,7 +137,8 @@
               <h3>Patents & Awards</h3>
               <ul>
                 <li>🏆 新型研發專利【外語口說評分系統】</li>
-                <li>🏆 國立勤益科技大學推動研究發展績效獎</li>
+                <li>🏆 國立勤益科技大學推動研究發展績效獎(專利獎)</li>
+                <li>🏆 國立勤益科技大學推動研究發展績效獎(核心證照獎)</li>
                 <li>🏆 美國夏威夷大學訪問學人(國科會千里馬計畫)</li>
               </ul>
             </div>
