--- a/patents-awards.html
+++ b/patents-awards.html
@@ -114,6 +114,10 @@
                 </div>
 
                 <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
+                  <img src="assets/img/awards/RD-Performance-Award-comp01.png" alt="" style="width: 60%; height: 60%;">
+                </div>
+
+                <div class="swiper-slide" style="display: flex; justify-content: center; align-items: center;">
                   <img src="assets/img/awards/RD-Performance-Award-pat01.png" alt="" style="width: 60%; height: 60%;">
                 </div>
 
@@ -137,6 +141,7 @@
               <h3>Patents & Awards</h3>
               <ul>
                 <li>🏆 新型研發專利【外語口說評分系統】</li>
+                <li>🏆 國立勤益科大推動研究發展績效獎(競賽獎)</li>
                 <li>🏆 國立勤益科大推動研究發展績效獎(專利獎)</li>
                 <li>🏆 國立勤益科大推動研究發展績效獎(核心證照獎)</li>
                 <li>🏆 美國夏威夷大學訪問學人(國科會千里馬計畫)</li>
