Update new publication

--- a/publications.html
+++ b/publications.html
@@ -100,7 +100,7 @@
               期刊論文 Journal Articles
             </h5>
             <ul>
-              <li><i class="bi bi-caret-right"></i> <span>宋威穎、楊真宜 (2026)。AI時代下人社領域教育轉型與發展:教育部 iLink 計畫之政策評估與協作策進，《通識教育學刊》。 (accepted)</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>宋威穎、楊真宜 (2026)。AI時代下人社領域教育轉型與發展:教育部 iLink 計畫之政策評估與協作策進，《通識教育學刊》。TSSCI (accepted)</span></li>
               <li><i class="bi bi-caret-right"></i> <span>Yang, Chen-Yi. (2017). Taiwan's New Southbound Policy and Cultivation of Proficient Language Speakers of Southeast Asian Languages. Taiwan International Studies Quarterly, Vol. 13. No. 4, pp. 143-74.</span></li>
               <li><i class="bi bi-caret-right"></i> <span>Yang, Chen-Yi. (2017). A Study on the Current Situation and Role of the Language of New Immigrants' Children in Taiwan. Languages and International Studies, 17, pp. 127-74. doi:10.3966/181147172017060017005</span></li>
             </ul>
